Fix z-index of header and fix footer

--- a/css/flatpickr.css
+++ b/css/flatpickr.css
@@ -32,7 +32,7 @@
 
 .flatpickr-calendar.open {
       display: inline-block;
-      z-index: 99999
+      z-index: 999
 }
 
 .flatpickr-calendar.animate.open {
